[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/MainScreens/Options.gd" type="Script" id=1]
[ext_resource path="res://Game/Backgrounds/RandomBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Buttons/Commons/Back.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Buttons/SoundAndMusic/Music.png" type="Texture" id=4]
[ext_resource path="res://Game/Buttons/SoundAndMusic/MusicPressed.png" type="Texture" id=5]
[ext_resource path="res://Game/Buttons/DeleteData/DeleteData-Normal.png" type="Texture" id=6]
[ext_resource path="res://Game/Buttons/DeleteData/DeleteData-Pressed.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeleteData:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="Options" type="Node" index="0"]
script = ExtResource( 1 )

[node name="RandomBackground" parent="." index="0" instance=ExtResource( 2 )]

[node name="Back" parent="." index="1" instance=ExtResource( 3 )]
rect_pivot_offset = Vector2( 62, 62 )
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Music" type="TextureButton" parent="." index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -63.0
margin_right = -108.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 50, 63 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="DeleteData" type="TextureButton" parent="." index="3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -558.0
margin_top = -42.0
margin_right = -458.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 50, 42 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ConfirmationDeleteData" type="ConfirmationDialog" parent="." index="4"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 318.0
margin_right = 646.0
margin_bottom = 388.0
rect_min_size = Vector2( 200, 70 )
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Confirmar decisión…"
resizable = false
dialog_text = "¿Esta seguro que desea borrar toda la data de Aprender a Programar? 
El juego se cerrará."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Rect" ]

[node name="Anim" type="AnimationPlayer" parent="." index="5"]
root_node = NodePath("..")
autoplay = "show"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 1 )
blend_times = [  ]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Music" to="." method="_on_Music_toggled"]
[connection signal="pressed" from="DeleteData" to="." method="_on_DeleteData_pressed"]
[connection signal="confirmed" from="ConfirmationDeleteData" to="." method="_on_ConfirmationDialog_confirmed"]
